examples/test/testpolicy11204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11204
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key48: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value39
          key47: value31
      podSelector:
        matchLabels:
          key10: value2
          key27: value31
